# compiledfiles

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
examples/: compiledfiles.rs
src/: lib.rs
tests/: basic.rs
