[package]
name = "compiledfiles"
description = "Parse native binary symbols for list of source files used to compile binary"
version = "0.7.0"
authors = ["Matt Schulte <schultetwin1@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/schultetwin1/compiledfiles"
repository = "https://github.com/schultetwin1/compiledfiles"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = "0.26.0"
object = "0.29.0"
pdb = "0.8.0"
thiserror = "1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
spectral = "0.6.0"
